arg: Simpler is_safe_to_store_in_double()

It could be considered misleading not to simply warn if the value being
marshalled is > 2^53. In addition, warning only when the value itself is
truncated is difficult, though not impossible, to do in a cross-platform
way.

https://bugzilla.gnome.org/show_bug.cgi?id=779399